kubernetes/apps/backend-node-js/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-node-js
  namespace: dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    name: backend-node-js
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-node-js
  namespace: dev
spec:
  selector:
    matchLabels:
      name: backend-node-js
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: backend-node-js
    spec:
      containers:
        - name: backend
          image: $CONTAINER_REGISTRY/backend-node-js:$VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000 
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
