kubernetes/apps/backend-node-js/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-node-js
  namespace: demo
spec:
  rules:
  - host: node-js.bonestealer.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-node-js
              port:
                number: 3000
